# humaan

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
cli/: README.md
core/: README.md
desktop/: README.md  package.json  pnpm-lock.yaml  tailwind.config.js
desktop/src/: app.css
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src/routes/: +page.svelte
