[package]
name = "humaan"
version = "0.1.0"
description = "A Humaan App"
authors = ["Humaan, Inc. <support@humaan.ai>"]
license = ""
repository = ""
default-run = "humaan"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "=2.0.0-rc.7", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.tauri]
features = ["macos-private-api"]
version  = "=2.0.0-rc.8"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.25"
